--- a/sass/modules/_m-home.scss
+++ b/sass/modules/_m-home.scss
@@ -228,10 +228,11 @@
                     
             margin:4rem auto auto 0rem;
             display: block;
+            
+            
 
             @media screen and (min-width: map-get($break-point, md)) {  
                 margin:1rem auto 2rem 0rem; 
-                
             }
 
             @media screen and (min-width: map-get($break-point, lg)) {
@@ -241,7 +242,6 @@
 
             @media screen and (min-width: map-get($break-point, mlg)) {
                 margin: 2rem auto auto 0rem ;
-                max-width: 20rem;
 
             }
         
@@ -1053,7 +1053,15 @@
                 
                 @media screen and (min-width: map-get($break-point, md)) {
                     height: auto;
-                    margin-top: auto;
+                    margin-top: 2rem;
+                    padding-top: 6rem;
+                    margin-bottom: 2rem;
+                    
+                    
+                }
+                @media screen and (min-width: map-get($break-point, lg)) {
+                    height: auto;
+                    margin-top: 4rem;
                     padding-top: 6rem
                     
                 }
@@ -1061,8 +1069,15 @@
                     background: none;
                     height: auto;
                     width: 100%;
-                    margin-top: 7rem;
+                    margin-top: 9rem;
                     padding-top: 8rem;
+                    
+                    
+                }
+                @media screen and (min-width: map-get($break-point, xxlg)) {
+                    
+                    margin-top: 12rem;
+                    margin-bottom: 3rem;
                     
                     
                 }
@@ -1080,11 +1095,17 @@
                     justify-content: space-around;
                     padding-bottom: 2rem;
                     
+                    @media screen and (min-width: map-get($break-point, md)) {
+                        
+                        margin-left:-2rem;
+                        
+                    }
                     @media screen and (min-width: map-get($break-point, lg)) {
                         display: grid;
                         grid-template-columns: 1fr 1fr;
                         grid-row: 1;
                         width: auto;
+                        margin-left:-2rem;
                         
                     }
                         .title__primary {
@@ -1108,14 +1129,77 @@
                             font-size: 30px;
                         }
                         @media screen and (min-width: map-get($break-point, lg)) {
-                            margin-bottom: 2rem;
+                            margin:1rem auto 2rem -23rem;
                             font-size: 30px;
                             text-align: left;
-                            width: auto;
+                            width: 200%;
                             line-height: 2rem;
                             font-size: 30px;
                         }
-                    
+                        @media screen and (min-width: map-get($break-point, mlg)) {
+                            margin:-3rem auto 2rem -32rem;
+                            
+                        }
+                        @media screen and (min-width: map-get($break-point, xlg)) {
+                            margin:-3rem auto 2rem -35rem;
+                            
+                        }
+                        @media screen and (min-width: map-get($break-point, xxlg)) {
+                            margin:-3rem auto 2rem -38rem;
+                            
+                        }
+                        @media screen and (min-width: map-get($break-point, xtlg)) {
+                            margin:-3rem auto 2rem -47rem;
+                            
+                        }
+                        }
+                        .img--detail{
+                        
+                            background-image: url('../img/demo.png');
+                            display: none;
+                            background-repeat: no-repeat;
+                            background-size:auto;
+                            
+                            
+                            
+                            @media screen and (min-width: map-get($break-point, md)) {
+                                display: block;
+                                margin-left: 2rem;
+                                background-size:18rem;
+
+                            }
+                            
+                
+                                @media screen and (min-width: map-get($break-point, lg)) {
+                                    display: block;
+                                    width: auto;
+                                    margin-top: 15rem;
+                                    background-size:24rem;
+                                    margin-left: 0;
+
+                                    
+                                }
+                                @media screen and (min-width: map-get($break-point, mlg)) {
+                                    background-size:30rem;
+                                    margin-top: 5rem;
+                                    z-index: 996;
+                                    
+                                    
+                            
+                                }
+                                @media screen and (min-width: map-get($break-point, xlg)) {
+                                    margin-top: 5rem;
+                                    background-size:36rem;
+
+                                }
+                                @media screen and (min-width: map-get($break-point, xtlg)) {
+                                    background-size:40rem;
+
+                                    margin-top: 3rem;
+                            
+                                }
+
+                            
                         }
                 
                         .crl--green {
@@ -1146,12 +1230,13 @@
                                 
                             }
                             @media screen and (min-width: map-get($break-point, lg)) {
-                                margin:auto;
+                                margin:auto  auto -2rem -23rem;
                                 font-size: 24px;
                                 text-align: left;
-                                width:auto;
+                                width: 180%;
                                 max-width: auto;
                                 line-height: 2.5rem;
+                                
                                 
                                 
                             }
@@ -1159,6 +1244,7 @@
                                 width: 100%;
                                 margin-left: 0;
                                 font-size: 30px;
+                                margin-top: 4rem;
                             }
                     
                         }
@@ -1192,7 +1278,7 @@
                             }
                             @media screen and (min-width: map-get($break-point, lg)) {
                                 
-                                width: 150%;
+                                width: 100%;
                             }
                             @media screen and (min-width: map-get($break-point, mlg)) {
                                 display: block;
@@ -1200,6 +1286,8 @@
                                 width: auto;
                                 margin-left: 0rem;
                                 font-size: 24px;
+                                margin-top: 4rem;
+
                                 
                             }
 
@@ -1207,46 +1295,6 @@
                 
                         }
                         
-                        .img--detail{
-                        
-                            background-image: url('../img/rea.png');
-                            display: none;
-                            background-repeat: no-repeat;
-                            background-size:auto;
-                            
-                
-                                @media screen and (min-width: map-get($break-point, lg)) {
-                                    display: block;
-                                    margin-top: -10rem;
-                                    
-                                }
-                                @media screen and (min-width: map-get($break-point, mlg)) {
-                                    display: block;
-                                    
-                                    width: auto;
-                                    z-index: 996;
-                                    margin-top: 12rem;
-                                    margin-left: 5rem;
-                                    
-                            
-                                }
-                                @media screen and (min-width: map-get($break-point, xlg)) {
-                                    
-                                    margin-top: 7rem;
-                                    
-                            
-                                }
-                                @media screen and (min-width: map-get($break-point, xtlg)) {
-                                    
-                                    margin-top: 7rem;
-                                    margin-left: 10rem;
-                                    
-                            
-                                }
-
-                            
-                        }  
-                                
                 
                     }
                             
