--- a/sass/modules/_m-realisations.scss
+++ b/sass/modules/_m-realisations.scss
@@ -620,4 +620,220 @@
   }
 
 
+
+
+
+   /********************section realisations********************/
+   .section__realisation--page_rea{
+        
+    margin:auto;
+    display: block;
+    margin-top: 5rem;
+    width: 100%;
+    padding:1rem;
+    
+    @media screen and (min-width: map-get($break-point, md)) {
+        height: auto;
+        margin-top: 2rem;
+        padding-top: 6rem;
+        margin-bottom: 2rem;
+        
+        
+    }
+    @media screen and (min-width: map-get($break-point, lg)) {
+        height: auto;
+        margin-top: 4rem;
+        padding-top: 6rem
+        
+    }
+    @media screen and (min-width: map-get($break-point, xxlg)) {
+        background: none;
+        height: auto;
+        width: 100%;
+        margin-top: 9rem;
+        padding-top: 8rem;
+        
+        
+    }
+    @media screen and (min-width: map-get($break-point, xxlg)) {
+        
+        margin-top: 12rem;
+        margin-bottom: 3rem;
+        
+        
+    }
+    @media screen and (min-width: map-get($break-point, xtlg)) {
+        
+        padding-bottom: 5rem;
+        margin-top: 0rem;
+        padding-top: 0rem;
+        
+        
+    }
+
+    .cadre__detail{
+        display: flex;
+        justify-content: space-around;
+        padding-bottom: 2rem;
+        
+        @media screen and (min-width: map-get($break-point, md)) {
+            
+            margin-left:-2rem;
+            
+        }
+        @media screen and (min-width: map-get($break-point, lg)) {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            grid-row: 1;
+            width: auto;
+            margin-left:-2rem;
+            
+        }
+            .title__primary {
+                font-style: italic;
+                margin:1rem auto 1rem auto;
+                text-align: left;
+                color: map-get($colors,primary );
+                width: 100%;
+                font-size: 30px;
+    
+    
+                span{
+                border-bottom: solid 3px map-get($colors , primaryGreen);
+                color: map-get($colors,primary ); 
+                font-weight: bold;
+                font-style: bold;
+                }
+    
+            @media screen and (min-width: map-get($break-point, md)) {
+                margin:1rem auto -4rem auto;
+                font-size: 30px;
+            }
+            @media screen and (min-width: map-get($break-point, lg)) {
+                margin:1rem auto 2rem -23rem;
+                font-size: 30px;
+                text-align: left;
+                width: 200%;
+                line-height: 2rem;
+                font-size: 30px;
+            }
+            @media screen and (min-width: map-get($break-point, mlg)) {
+                margin:-3rem auto 2rem -32rem;
+                
+            }
+            @media screen and (min-width: map-get($break-point, xlg)) {
+                margin:-3rem auto 2rem -35rem;
+                
+            }
+            @media screen and (min-width: map-get($break-point, xxlg)) {
+                margin:-3rem auto 2rem -38rem;
+                
+            }
+            @media screen and (min-width: map-get($break-point, xtlg)) {
+                margin:-3rem auto 2rem -47rem;
+                
+            }
+            }
+            .img--detail{
+            
+                background-image: url('../img/demo-right.png');
+                display: block;
+                background-repeat: no-repeat;
+                background-size:auto;
+                width:  5rem;
+                
+                
+                
+                @media screen and (min-width: map-get($break-point, md)) {
+                    display: block;
+                    margin-left: 2rem;
+                    background-size:18rem;
+
+                }
+                
+    
+                    @media screen and (min-width: map-get($break-point, lg)) {
+                        display: block;
+                        width: auto;
+                        margin-top: 15rem;
+                        background-size:24rem;
+                        margin-left: 0;
+
+                        
+                    }
+                    @media screen and (min-width: map-get($break-point, mlg)) {
+                        background-size:30rem;
+                        margin-top: 5rem;
+                        z-index: 996;
+                        
+                        
+                
+                    }
+                    @media screen and (min-width: map-get($break-point, xlg)) {
+                        margin-top: 5rem;
+                        background-size:36rem;
+
+                    }
+                    @media screen and (min-width: map-get($break-point, xtlg)) {
+                        background-size:40rem;
+
+                        margin-top: 3rem;
+                
+                    }
+
+                
+            }
+
+            .txt__liner--green-2{
+                margin:1.5rem auto auto auto;
+                padding-bottom: 1rem;
+                text-align: left;
+                color: map-get($colors,primary );
+                max-width: auto;
+                font-size: 20px;
+                width: 100%;
+                line-height: 2rem;
+    
+                    span{
+                        border-bottom: solid 3px map-get($colors , primaryGreen);
+                        color: map-get($colors,primary ); 
+                        font-style: bolder;
+                    }
+    
+    
+                @media screen and (min-width: map-get($break-point, md)) {
+                    margin:2rem auto auto 0;
+                    font-size: 20px;
+                    text-align: auto;
+                    width: 100%;
+                    
+                    line-height: 2rem;
+                    
+                }
+                @media screen and (min-width: map-get($break-point, lg)) {
+                    
+                    width: 100%;
+                }
+                @media screen and (min-width: map-get($break-point, mlg)) {
+                    display: block;
+                    grid-column: 2;
+                    width: auto;
+                    margin-left: 0rem;
+                    font-size: 24px;
+                    margin-top: 4rem;
+
+                    
+                }
+
+                
+    
+            }
+            
+    
+        }
+                
+    
+
+}
+
 }
