adaptation contact mobile

--- a/sass/layout/_l-layout.scss
+++ b/sass/layout/_l-layout.scss
@@ -14,7 +14,7 @@
         
     }
 }
-.l-wrapper-contact {
+.l-wrapper--contact {
     display: grid;
     grid-template-columns:  0.38fr 1fr 0.3fr ;
     grid-template-rows:  0.5fr auto;
