--- a/css/screen.css
+++ b/css/screen.css
@@ -132,7 +132,7 @@ a:hover {
 }
 
 /* line 17, ../sass/layout/_l-layout.scss */
-.l-wrapper-contact {
+.l-wrapper--contact {
   display: grid;
   grid-template-columns: 0.38fr 1fr 0.3fr;
   grid-template-rows: 0.5fr auto;
@@ -141,7 +141,7 @@ a:hover {
 }
 @media screen and (min-width: 740px) {
   /* line 17, ../sass/layout/_l-layout.scss */
-  .l-wrapper-contact {
+  .l-wrapper--contact {
     grid-template-areas: "l-section__banner l-section__banner  . ";
   }
 }
@@ -4625,55 +4625,90 @@ footer .l-footer .section__footer--right .btn--footer {
 
 /********************wrapper********************/
 /* line 2, ../sass/modules/_m-contact.scss */
-.l-wrapper-contact {
+.l-wrapper--contact {
   /********************section contact********************/
 }
-/* line 4, ../sass/modules/_m-contact.scss */
-.l-wrapper-contact .header__map {
+/* line 7, ../sass/modules/_m-contact.scss */
+.l-wrapper--contact .header__map {
   display: block;
   border-top-left-radius: 25px;
 }
-/* line 19, ../sass/modules/_m-contact.scss */
-.l-wrapper-contact .l-logo-lg-rea {
+@media screen and (min-width: 740px) {
+  /* line 7, ../sass/modules/_m-contact.scss */
+  .l-wrapper--contact .header__map {
+    display: block;
+    border-top-left-radius: 25px;
+  }
+}
+@media screen and (min-width: 1024px) {
+  /* line 7, ../sass/modules/_m-contact.scss */
+  .l-wrapper--contact .header__map {
+    display: block;
+    border-top-left-radius: 25px;
+  }
+}
+/* line 22, ../sass/modules/_m-contact.scss */
+.l-wrapper--contact .l-logo-lg-rea {
   display: none;
 }
 @media screen and (min-width: 740px) {
-  /* line 19, ../sass/modules/_m-contact.scss */
-  .l-wrapper-contact .l-logo-lg-rea {
+  /* line 22, ../sass/modules/_m-contact.scss */
+  .l-wrapper--contact .l-logo-lg-rea {
     display: none;
   }
 }
 @media screen and (min-width: 1024px) {
-  /* line 19, ../sass/modules/_m-contact.scss */
-  .l-wrapper-contact .l-logo-lg-rea {
+  /* line 22, ../sass/modules/_m-contact.scss */
+  .l-wrapper--contact .l-logo-lg-rea {
     display: block;
-    width: 15rem;
-    margin-top: -45.2rem;
+    width: 12rem;
+    margin-top: -44.6rem;
     margin-left: 6rem;
     z-index: 999;
   }
 }
-/* line 35, ../sass/modules/_m-contact.scss */
-.l-wrapper-contact .description {
+/* line 40, ../sass/modules/_m-contact.scss */
+.l-wrapper--contact .description {
   display: block;
+  width: 100%;
   position: absolute;
-  margin: 7rem auto auto 6.5rem;
+  margin: 40rem auto auto 3rem;
   color: white;
   padding-bottom: 2rem;
   z-index: 997;
+  grid-column: 1/3;
 }
-/* line 47, ../sass/modules/_m-contact.scss */
-.l-wrapper-contact .description .detail {
+@media screen and (min-width: 740px) {
+  /* line 40, ../sass/modules/_m-contact.scss */
+  .l-wrapper--contact .description {
+    margin: -5rem auto 1rem 5rem;
+    width: 50%;
+  }
+}
+@media screen and (min-width: 1024px) {
+  /* line 40, ../sass/modules/_m-contact.scss */
+  .l-wrapper--contact .description {
+    margin: 15rem auto 1rem auto;
+    width: 50%;
+  }
+}
+/* line 59, ../sass/modules/_m-contact.scss */
+.l-wrapper--contact .description .title {
+  margin-top: 2rem;
+}
+/* line 65, ../sass/modules/_m-contact.scss */
+.l-wrapper--contact .description .detail {
   display: block;
   position: absolute;
   text-align: left;
-  margin: 10rem auto auto 0;
-  color: white;
+  margin: 2rem auto auto 0;
+  width: 80%;
+  line-height: 2;
   padding-bottom: 2rem;
 }
 @media screen and (min-width: 740px) {
-  /* line 47, ../sass/modules/_m-contact.scss */
-  .l-wrapper-contact .description .detail {
+  /* line 65, ../sass/modules/_m-contact.scss */
+  .l-wrapper--contact .description .detail {
     display: block;
     text-align: left;
     margin: 10rem auto auto 0;
@@ -4682,8 +4717,20 @@ footer .l-footer .section__footer--right .btn--footer {
   }
 }
 @media screen and (min-width: 1024px) {
-  /* line 47, ../sass/modules/_m-contact.scss */
-  .l-wrapper-contact .description .detail {
+  /* line 65, ../sass/modules/_m-contact.scss */
+  .l-wrapper--contact .description .detail {
     margin: -8rem auto auto 10rem;
+  }
+}
+/* line 89, ../sass/modules/_m-contact.scss */
+.l-wrapper--contact .point__contact.l-point {
+  margin-left: 12rem;
+  margin-top: -7rem;
+  z-index: 997;
+}
+@media screen and (min-width: 740px) {
+  /* line 89, ../sass/modules/_m-contact.scss */
+  .l-wrapper--contact .point__contact.l-point {
+    margin-top: -17rem;
   }
 }
