--- a/sass/modules/_m-contact.scss
+++ b/sass/modules/_m-contact.scss
@@ -1,18 +1,21 @@
 /********************wrapper********************/
-.l-wrapper-contact{
+.l-wrapper--contact{
     /********************section contact********************/
+    .l-banner-img{
+        
+    }
     .header__map{
         display:block;
         border-top-left-radius: 25px;
         
-
-
         @media screen and (min-width: map-get($break-point, md)) {
-
+            display:block;
+            border-top-left-radius: 25px;
         }
         
         @media screen and (min-width: map-get($break-point, lg)) {
-            
+            display:block;
+            border-top-left-radius: 25px;
         }
         
     }
@@ -26,30 +29,46 @@
         
         @media screen and (min-width: map-get($break-point, lg)) {
             display: block;
-            width: 15rem;
-            margin-top: -45.2rem;
+            width: 12rem;
+            margin-top: -44.6rem;
             margin-left: 6rem;
             z-index: 999;
+
+        
         }
     }
     .description{
         display: block;
-            
+        width: 100%;    
         position: absolute;
-        margin: 7rem auto auto 6.5rem;
-        color: white;
+        margin: 40rem auto auto 3rem;
+        color: map-get($colors ,main );
         padding-bottom: 2rem;
         z-index: 997;
+        grid-column: 1/3;
+
+        @media screen and (min-width: map-get($break-point, md)) {
+            margin:-5rem auto 1rem 5rem;
+            width: 50%;
+        }
+        @media screen and (min-width: map-get($break-point, lg)) {
+            margin:15rem auto 1rem auto;
+            width: 50%;
+        }
 
         .title{
-    
+            margin-top: 2rem;
+            
+
         }
+
         .detail{
             display: block;
             position: absolute;
             text-align: left;
-            margin: 10rem auto auto 0;
-            color: white;
+            margin: 2rem auto auto 0;
+            width: 80%;
+            line-height: 2;
             padding-bottom: 2rem;
     
     
@@ -65,6 +84,15 @@
             @media screen and (min-width: map-get($break-point, lg)) {
                 margin: -8rem auto auto 10rem;
             }
+        }
+    }
+    .point__contact.l-point{
+        margin-left: 12rem;
+        margin-top: -7rem;
+        z-index: 997;
+
+        @media screen and (min-width: map-get($break-point, md)) {
+            margin-top: -17rem;
         }
     }
    }
