--- a/css/screen.css
+++ b/css/screen.css
@@ -2802,7 +2802,7 @@ footer .l-footer .section__footer--right .btn--footer {
 }
 /* line 1156, ../sass/modules/_m-home.scss */
 .section__realisation .cadre__detail .img--detail {
-  background-image: url("../img/demo.png");
+  background-image: url("../img/Demo.png");
   display: none;
   background-repeat: no-repeat;
   background-size: auto;
