--- a/sass/modules/_m-home.scss
+++ b/sass/modules/_m-home.scss
@@ -1155,7 +1155,7 @@
                         }
                         .img--detail{
                         
-                            background-image: url('../img/demo.png');
+                            background-image: url('../img/Demo.png');
                             display: none;
                             background-repeat: no-repeat;
                             background-size:auto;
