--- a/sass/modules/_m-realisations-grid.scss
+++ b/sass/modules/_m-realisations-grid.scss
@@ -1,7 +1,5 @@
 /*GRID REALISATION CARD1-2 */
-.m-wrap.realisation {
-  width: 95%;
-}
+
 .grid-containerAmoi {
   display: grid;
   grid-template-columns: 20% 13% 7% 15% 30% 15%;
@@ -19,6 +17,9 @@
 }
 .grid-containerAmoi > *, .grid-containerAmoi2 > *, .grid-containerAmoi3 > *{
   padding-left: 0.8rem;
+}
+.grid-containerAmoi3{
+  margin-top: 2rem;
 }
 
 
@@ -38,6 +39,10 @@
   padding-bottom: 0.8rem;
   margin-top: 1.4rem;
 }
+.item-31{
+  margin-bottom: 11.4rem;
+}
+
 
 .item-2 {
   grid-column: 1 / 7;
@@ -52,6 +57,12 @@
   margin-bottom: 3.8rem;
   padding-bottom: 0.8rem;
   margin-top: 1.9rem;
+}
+.item-32{
+
+  margin-bottom: 3.8rem;
+  padding-bottom: 0.8rem;
+  margin-top: 3.1rem;
 }
 
 .item-3 {
@@ -73,7 +84,7 @@
   grid-row: 2/2;
   margin-bottom: 0.2rem;
   padding-bottom: 0.8rem;
-  margin-top: 2.9rem;
+  margin-top: -7.1rem;
 }
 
 .item-4 {
@@ -96,10 +107,10 @@
 }
 .item-34 {
   grid-column: 1/7;
-  grid-row: 2/3;
-  margin-bottom: 5.8rem;
+  grid-row: 4/5;
+  margin-bottom: 3.8rem;
   padding-bottom: 0.8rem;
-  margin-top: -11.1rem;
+  margin-top: 0.9rem
 }
 
 .item-5,.item-25, .item-35 {
@@ -120,6 +131,12 @@
   padding-bottom: 0.8rem;
   margin-top: 3.1rem;
   background: lightgray;
+}
+.item-36 {
+  grid-column: 1 / 7;
+  grid: 4 / 6;
+  margin-right: 2.5rem;
+  background: yellowgreen;
 }
 
 .item-27 {
