--- a/sass/modules/_m-realisations.scss
+++ b/sass/modules/_m-realisations.scss
@@ -151,9 +151,8 @@
       padding-left: 0.8rem;
     }
     .coverimage-ter img{
-      width: 130%;
-      padding-left: 2.2rem;
-      bottom: 13.5rem;
+      margin-left: 3rem;
+      width: 157%;
     }
     .coverimage2middle {
       position: relative;
