--- a/css/screen.css
+++ b/css/screen.css
@@ -2903,8 +2903,15 @@ footer .l-footer .section__footer--right .btn--footer {
   }
 }
 @media screen and (min-width: 530px) {
+  .m-wrap.realisation .title__primary2 {
+    padding-right: 0.5rem;
+  }
+  .m-wrap.realisation .backimage > img {
+    max-width: 78%;
+  }
   .m-wrap.realisation .coverimage {
     bottom: 25rem;
+    width: 82%;
   }
   .m-wrap.realisation .coverimage-ter {
     left: 12.7rem;
@@ -2919,7 +2926,7 @@ footer .l-footer .section__footer--right .btn--footer {
     left: -0.6rem;
     bottom: 19rem;
     width: 89%;
-    padding-left: 6rem;
+    padding-left: 5rem;
   }
   .m-wrap.realisation .backimage-second2left {
     width: 118%;
@@ -2951,10 +2958,10 @@ footer .l-footer .section__footer--right .btn--footer {
     max-width: 96%;
     position: relative;
     left: 0rem;
-    top: -7rem;
+    top: -11.5rem;
   }
   .m-wrap.realisation .coverrelatif2 > img {
-    width: 109%;
+    width: 170%;
   }
 }
 @media screen and (min-width: 600px) {
@@ -3546,7 +3553,7 @@ footer .l-footer .section__footer--right .btn--footer {
 .item-32 {
   margin-bottom: 3.8rem;
   padding-bottom: 0.8rem;
-  margin-top: 3.1rem;
+  margin-top: 4.1rem;
 }
 
 .item-3 {
@@ -3664,6 +3671,11 @@ footer .l-footer .section__footer--right .btn--footer {
     grid-row: 5/6;
     margin-top: 34.9rem;
   }
+
+  .item-32 {
+    padding-top: 1rem;
+    margin-top: 9.1rem;
+  }
 }
 /* version Surface Duo 530px xx-s */
 @media screen and (min-width: 530px) {
@@ -3685,7 +3697,7 @@ footer .l-footer .section__footer--right .btn--footer {
   .item-32 {
     grid-column: 5/7;
     grid-row: 2/3;
-    margin-top: 7.1rem;
+    margin-top: 0.1rem;
   }
 
   .item-23 {
@@ -3709,7 +3721,9 @@ footer .l-footer .section__footer--right .btn--footer {
   }
 
   .item-34 {
-    margin-top: 34.9rem;
+    margin-top: 1.9rem;
+    grid-column: 1/7;
+    grid-row: 3/5;
   }
 
   .item-26 {
@@ -3720,6 +3734,8 @@ footer .l-footer .section__footer--right .btn--footer {
   .item-36 {
     grid-column: 1/4;
     grid-row: 4/6;
+    margin-top: 6rem;
+    margin-right: -1.3rem;
   }
 
   .item-27 {
@@ -3728,7 +3744,7 @@ footer .l-footer .section__footer--right .btn--footer {
   }
 
   .item-37 {
-    grid-column: 3/6;
+    grid-column: 4/7;
     grid-row: 5/6;
     margin-left: 1.7rem;
   }
