--- a/sass/modules/_m-realisations-grid.scss
+++ b/sass/modules/_m-realisations-grid.scss
@@ -62,7 +62,8 @@
 
   margin-bottom: 3.8rem;
   padding-bottom: 0.8rem;
-  margin-top: 3.1rem;
+
+  margin-top: 4.1rem;
 }
 
 .item-3 {
@@ -176,6 +177,11 @@
     grid-row: 5 / 6;
     margin-top: 34.9rem;
   }
+  .item-32 {
+
+    padding-top: 1rem;
+    margin-top: 9.1rem;
+  }
 
 }
 
@@ -198,7 +204,9 @@
   .item-32 {
     grid-column: 5 / 7;
     grid-row: 2 / 3;
-    margin-top: 7.1rem;
+
+    margin-top: 0.1rem;
+
   }
   .item-23 {
     grid-column: 5/7;
@@ -219,7 +227,9 @@
     }
   }
   .item-34{
-    margin-top: 34.9rem;
+    margin-top: 1.9rem;
+    grid-column: 1/7;
+    grid-row: 3/5
   }
   .item-26 {
     grid-column: 1 / 3;
@@ -228,13 +238,15 @@
   .item-36{
     grid-column: 1 / 4;
     grid-row: 4/6;
+    margin-top: 6rem;
+    margin-right: -1.3rem;
   }
   .item-27 {
     margin-top: 1rem;
     padding-left: 1.5rem;
   }
   .item-37 {
-    grid-column: 3 / 6;
+    grid-column: 4 / 7;
     grid-row: 5 / 6;
     margin-left: 1.7rem;
   }
