--- a/sass/base/_variables.scss
+++ b/sass/base/_variables.scss
@@ -5,6 +5,7 @@ $break-point: (
     xx-s:    530px,
     xs:      600px,
     md:      740px,
+    mdd:     769px,
     md-plus: 799px,
     lg:    1024px,
     mlg:   1280px,
