--- a/sass/modules/_m-realisations-grid.scss
+++ b/sass/modules/_m-realisations-grid.scss
@@ -131,7 +131,6 @@
   margin-bottom: 1.4rem;
   padding-bottom: 0.8rem;
   margin-top: 3.1rem;
-  background: lightgray;
 }
 .item-36 {
   grid-column: 1 / 7;
@@ -157,380 +156,386 @@
 
 
 /* version moyen mobile xxs 420px */
-@media screen and (min-width: break-point(xxs)){
-  .item-2{
-    margin-top: 1rem;
-  }
-  .item-23 {
-    grid-column: 1 / 7;
-    grid-row: 2 / 3;
-  }
+  @media screen and (min-width: break-point(xxs)){
+    .item-2{
+      margin-top: 1rem;
+    }
+    .item-23 {
+      grid-column: 1 / 7;
+      grid-row: 2 / 3;
+    }
 
-  .item-24{
-    grid-row: 2 / 3;
-    margin-bottom: 0.8rem;
-    margin-top: 11rem;
-  }
+    .item-24{
+      grid-row: 2 / 3;
+      margin-bottom: 0.8rem;
+      margin-top: 11rem;
+    }
 
-  .item-27 {
-    grid-column: 3 / 7;
-    grid-row: 5 / 6;
-    margin-top: 34.9rem;
-  }
-  .item-32 {
+    .item-27 {
+      grid-column: 3 / 7;
+      grid-row: 5 / 6;
+      margin-top: 34.9rem;
+    }
+    .item-32 {
 
-    padding-top: 1rem;
-    margin-top: 9.1rem;
-  }
-
-}
-
-/* version Surface Duo 530px xx-s */
-@media screen and (min-width: break-point(xx-s)){
-
-  .item-21 {
-    grid-column: 1/6;
-  }
-  .item-31 {
-    grid-column: 4 / 7;
-    grid-row: 1 / 2;
-    text-align: right;
-  }
-
-  .item-22 {
-    grid-column: 2 / 5;
-    grid-row: 2 / 3;
-  }
-  .item-32 {
-    grid-column: 5 / 7;
-    grid-row: 2 / 3;
-
-    margin-top: 0.1rem;
-
-  }
-  .item-3{
-    grid-column: 1/7;
-    grid-row: 3/5;
-    margin-bottom: 16.8rem;
-    padding-bottom: 0.8rem;
-    margin-top: 29.9rem;
-  }
-
-  .item-23 {
-    grid-column: 5/7;
-    grid-row: 2/3;
-    margin-top: 1rem;
-  }
-  .item-33{
-    grid-column: 1/6;
-    padding-top: 11rem;
-  }
-  .item-24 {
-    grid-column: 4 / 7;
-    grid-row: 3 / 4;
-    margin-top: 2.4rem;
-
-    p{
-      margin-top: -2rem;
+      padding-top: 1rem;
+      margin-top: 9.1rem;
     }
   }
-  .item-4{
-    grid-column: 2/7;
-    grid-row: 4/6;
-    margin-top: -3.1rem;
-    margin-bottom: 0.5rem;
-    z-index: 4;
-  }
-  .item-34{
-    margin-top: -3.1rem;
-    grid-column: 1/7;
-    grid-row: 3/5
-  }
-  .item-26 {
-    grid-column: 1 / 3;
-    grid-row: 3 / 5;
-  }
-  .item-36{
-    grid-column: 1 / 4;
-    grid-row: 4/6;
-    margin-top: 6rem;
-    margin-right: -1.3rem;
-  }
-  .item-27 {
-    margin-top: 1rem;
-    padding-left: 1.5rem;
-  }
-  .item-37 {
-    grid-column: 4 / 7;
-    grid-row: 5 / 6;
-    margin-left: 1.7rem;
-  }
 
-}
+/* version Surface Duo 530px xx-s */
+  @media screen and (min-width: break-point(xx-s)){
+
+    .item-21 {
+      grid-column: 1/6;
+    }
+    .item-31 {
+      grid-column: 4 / 7;
+      grid-row: 1 / 2;
+      text-align: right;
+    }
+
+    .item-22 {
+      grid-column: 2 / 5;
+      grid-row: 2 / 3;
+    }
+    .item-32 {
+      grid-column: 5 / 7;
+      grid-row: 2 / 3;
+
+      margin-top: 0.1rem;
+
+    }
+    .item-3{
+      grid-column: 1/7;
+      grid-row: 3/5;
+      margin-bottom: 16.8rem;
+      padding-bottom: 0.8rem;
+      margin-top: 29.9rem;
+    }
+
+    .item-23 {
+      grid-column: 5/7;
+      grid-row: 2/3;
+      margin-top: 1rem;
+    }
+    .item-33{
+      grid-column: 1/6;
+      padding-top: 11rem;
+    }
+    .item-24 {
+      grid-column: 4 / 7;
+      grid-row: 3 / 4;
+      margin-top: 2.4rem;
+
+      p{
+        margin-top: -2rem;
+      }
+    }
+    .item-4{
+      grid-column: 2/7;
+      grid-row: 4/6;
+      margin-top: -3.1rem;
+      margin-bottom: 0.5rem;
+      z-index: 4;
+    }
+    .item-34{
+      margin-top: -3.1rem;
+      grid-column: 1/7;
+      grid-row: 3/5
+    }
+    .item-26 {
+      grid-column: 1 / 3;
+      grid-row: 3 / 5;
+    }
+    .item-36{
+      grid-column: 1 / 4;
+      grid-row: 4/6;
+      margin-top: 6rem;
+      margin-right: -1.3rem;
+    }
+    .item-27 {
+      margin-top: 1rem;
+      padding-left: 1.5rem;
+    }
+    .item-37 {
+      grid-column: 4 / 7;
+      grid-row: 5 / 6;
+      margin-left: 1.7rem;
+    }
+  }
 
 
 /* version petite tablette xs 600px */
-@media screen and (min-width: break-point(xs)){
-  .m-wrap.realisation {
-    width: 90%;
-  }
-  .grid-containerAmoi {
-    font-size: 1rem;
-  }
-
-  .item-1 {
-    grid-column: 2 / 7;
-    grid-row: 2 / 3;
-    padding-bottom: 0.8rem;
-    margin-bottom: 1.3rem;
-    margin-top: 1.4rem;
-  //  border: 1px dotted red;
-  }
-
-  .item-2 {
-    grid-column: 1 / 3;
-    grid-row: 3 / 10;
-    padding-bottom: 0.8rem;
-    margin-top: 8.4rem;
-   // border: 1px dotted lightcoral;
-    z-index: 6;
-  }
-  .item-27 {
-    margin-bottom: 0.5rem;
-
-  }
-
-  .item-3 {
-    grid-column: 5 / 7;
-    padding-bottom: 5.8rem;
-    margin-bottom: 1.1rem;
-    margin-top: 1.4rem;
-
-  }
-
-  .item-4 {
-    grid-column: 2 / 7;
-    padding-bottom: 0.8rem;
-    margin-bottom: 1rem;
-    margin-top: 1.4rem;
-  }
-
-
-}
-
-/* grande TABLETTE md  740px */
-@media screen and (min-width: break-point(md)){
-  .m-wrap.realisation {
-    width: 85%
-  }
-  .item-1{
-    z-index: 2;
-  }
-  .item-21{
-    grid-column: 1 / 6;
-  }
-  .item-31{
-    grid-column: 3/7;
-  }
-
-  .item-2{
-    grid-column: 1/2;
-    grid-row: 3/10;
-    //background-color: brown;
-  }
-  .item-22{
-    margin-top: 0.2rem;
-    margin-bottom: 8rem;
-  }
-
-  .item-3 {
-    grid-column: 5/7;
-    margin-left: 2.6rem;
-    padding-left: 1.4rem;
-    z-index: 2;
-  }
-
-  .item-23{
-    grid-column: 5 / 7;
-    grid-row: 1 / 3;
-  }
-  .item-24{
-    grid-row: 2/4;
-    margin-top: 19.7rem;
-    margin-left: 4rem;
-    grid-column: 4/7;
-  }
-  .item-35{
-    display: grid;
-    grid-column: 5 / 7;
-    grid-row: 3 / 5;
-  }
-  .item-26 {
-    grid-column: 1/3;
-    grid-row: 2/6;
-    margin-top: 7.1rem;
-  }
-  .item-27 {
-    grid-column: 4/7;
-    margin-top: 2.1rem;
-
-  }
-
-}
-/* petit PC portable md-plus 799 */
-@media screen and (min-width: break-point(md-plus)){
-  .item-1 {
-    grid-column: 5 / 7;
-    grid-row: 2 / 3;
-    padding-bottom: 0.8rem;
-    margin-bottom: 1rem;
-    margin-top: 1.4rem;
-  }
-  .item-21{
-    margin-right: 1rem;
-    padding-right: 1rem;
-  }
-
-  .item-2 {
-    grid-column: 1/2;
-    grid-row: 3/10;
-    padding: 10px 0;
-
-    p{
-      padding: 10px;
+  @media screen and (min-width: break-point(xs)){
+    .m-wrap.realisation {
+      width: 90%;
     }
-  }
-  .item-22{
-    margin-right: -2rem;
-  }
-
-  .item-3 {
-    grid-column: 5 / 7;
-    grid-row: 4 / 5;
-    margin-bottom: 0.7rem;
-    z-index: 3;
-    margin-left: 3.1rem;
-  }
-
-  .item-4 {
-    grid-column: 2 / 6;
-    grid-row: 5 / 7;
-    margin-top: 0.7rem;
-    margin-bottom: -1.9rem;
-    margin-right: 1.4rem;
-    z-index: 6;
-  }
-  .item-24{
-    margin-top: 14.5rem;
-    grid-column: 3/6;
-    margin-left: 2.6rem;
-    padding-right: 0.5rem;
-  }
-
-  .item-5 {
-    display: grid;
-    grid-column: 6 / 7;
-    grid-row: 5 / 9;
-    z-index: 6;
-    padding-top: 1.9rem;
-    margin-bottom: 1.4rem;
-
-    p{
+    .grid-containerAmoi {
       font-size: 1rem;
     }
+
+    .item-1 {
+      grid-column: 2 / 7;
+      grid-row: 2 / 3;
+      padding-bottom: 0.8rem;
+      margin-bottom: 1.3rem;
+      margin-top: 1.4rem;
+    //  border: 1px dotted red;
+    }
+
+    .item-2 {
+      grid-column: 1 / 3;
+      grid-row: 3 / 10;
+      padding-bottom: 0.8rem;
+      margin-top: 8.4rem;
+    // border: 1px dotted lightcoral;
+      z-index: 6;
+    }
+    .item-27 {
+      margin-bottom: 0.5rem;
+
+    }
+
+    .item-3 {
+      grid-column: 5 / 7;
+      padding-bottom: 5.8rem;
+      margin-bottom: 1.1rem;
+      margin-top: 1.4rem;
+
+    }
+
+    .item-4 {
+      grid-column: 2 / 7;
+      padding-bottom: 0.8rem;
+      margin-bottom: 1rem;
+      margin-top: 1.4rem;
+    }
   }
-  .item-25{
-    display: grid;
+
+/* grande TABLETTE md  740px */
+  @media screen and (min-width: break-point(md)){
+    .m-wrap.realisation {
+      width: 85%
+    }
+    .item-1{
+      z-index: 2;
+    }
+    .item-21{
+      grid-column: 1 / 6;
+    }
+    .item-31{
+      grid-column: 3/7;
+    }
+
+    .item-2{
+      grid-column: 1/2;
+      grid-row: 3/10;
+      //background-color: brown;
+    }
+    .item-22{
+      margin-top: 0.2rem;
+      margin-bottom: 8rem;
+    }
+
+    .item-3 {
+      grid-column: 5/7;
+      margin-left: 2.6rem;
+      padding-left: 1.4rem;
+      z-index: 2;
+    }
+
+    .item-23{
+      grid-column: 5 / 7;
+      grid-row: 1 / 3;
+    }
+    .item-24{
+      grid-row: 2/4;
+      margin-top: 19.7rem;
+      margin-left: 4rem;
+      grid-column: 4/7;
+    }
+    .item-35{
+      display: grid;
+      grid-column: 5 / 7;
+      grid-row: 3 / 5;
+    }
+    .item-26 {
+      grid-column: 1/3;
+      grid-row: 2/6;
+      margin-top: 7.1rem;
+    }
+    .item-27 {
+      grid-column: 4/7;
+      margin-top: 2.1rem;
+    }
+  }
+  /* nouveau break-point mdd 769px */
+  @media screen and (min-width: break-point(mdd)){
+    .item-4 {
+      grid-column: 1/5;
+      grid-row: 5/6;
+    }
+    .item-5 {
+      display: grid;
     grid-column: 5/7;
-    grid-row: 2/6;
-    padding-top: 1.9rem;
-    margin-bottom: 1.4rem;
-    left: 2rem;
-    margin-left: 4rem;
+    grid-row: 5/6;
+    padding-left: 1.5rem;
+    background-color: yellow;
+    }
   }
 
-  .item-6 {
-    grid-column: 4/7;
-    grid-row: 8 / 10;
-    margin-bottom: 10px;
-    z-index: 3;
+/* petit PC portable md-plus 799 */
+  @media screen and (min-width: break-point(md-plus)){
+    .item-1 {
+      grid-column: 5 / 7;
+      grid-row: 2 / 3;
+      padding-bottom: 0.8rem;
+      margin-bottom: 1rem;
+      margin-top: 1.4rem;
+    }
+    .item-21{
+      margin-right: 1rem;
+      padding-right: 1rem;
+    }
+
+    .item-2 {
+      grid-column: 1/2;
+      grid-row: 3/10;
+      padding: 10px 0;
+
+      p{
+        padding: 10px;
+      }
+    }
+    .item-22{
+      margin-right: -2rem;
+    }
+
+    .item-3 {
+      grid-column: 5 / 7;
+      grid-row: 4 / 5;
+      margin-bottom: 0.7rem;
+      z-index: 3;
+      margin-left: 3.1rem;
+    }
+
+    .item-4 {
+      grid-column: 2 / 6;
+      grid-row: 5 / 7;
+      margin-top: 0.7rem;
+      margin-bottom: -1.9rem;
+      margin-right: 1.4rem;
+      z-index: 6;
+    }
+    .item-24{
+      margin-top: 14.5rem;
+      grid-column: 2/6;
+      margin-left: 2.6rem;
+      padding-right: 1.5rem;
+    }
+
+    .item-5 {
+      display: grid;
+      grid-column: 6 / 7;
+      grid-row: 5 / 9;
+      z-index: 6;
+      padding-top: 1.9rem;
+      margin-bottom: 1.4rem;
+
+      p{
+        font-size: 1rem;
+      }
+    }
+    .item-25{
+      display: grid;
+      grid-column: 5/7;
+      grid-row: 2/6;
+      padding-top: 1.9rem;
+      margin-bottom: 1.4rem;
+      left: 2rem;
+      margin-left: 4rem;
+    }
+
+    .item-6 {
+      grid-column: 4/7;
+      grid-row: 8 / 10;
+      margin-bottom: 10px;
+      z-index: 3;
+    }
+
+    .item-27{
+      padding-left: 0.5rem;
+    }
   }
-
-  .item-27{
-    padding-left: 0.5rem;
-  }
-
-
-}
 
 /* petit PC portable lg 1024px */
-@media screen and (min-width: break-point(lg)){
-  .item-21 {
-    grid-column: 1 / 5;
-  }
-  .item-22 {
-    grid-column: 2/5;
-    margin-bottom: 4.5rem;
-  }
-  .item-23 {
-    grid-column: 4 / 6;
-    grid-row: 1 / 3;
-  }
-  .item-24 {
-    grid-column: 3 / 6;
-    margin-top: 15.5rem;
-    margin-bottom: 4rem;
-  }
-  .item-26{
-    margin-top: 8.9rem;
-  }
+  @media screen and (min-width: break-point(lg)){
+    .item-21 {
+      grid-column: 1 / 5;
+    }
+    .item-22 {
+      grid-column: 2/5;
+      margin-bottom: 4.5rem;
+    }
+    .item-23 {
+      grid-column: 4 / 6;
+      grid-row: 1 / 3;
+    }
+    .item-24 {
+      grid-column: 3 / 6;
+      margin-top: 15.5rem;
+      margin-bottom: 4rem;
+    }
+    .item-26{
+      margin-top: 8.9rem;
+    }
 
-  .item-27 {
-    grid-column: 3/6;
-    margin-left: 1rem;
-    margin-right: 1rem;
+    .item-27 {
+      grid-column: 3/6;
+      margin-left: 1rem;
+      margin-right: 1rem;
+    }
   }
-}
 
 /* petit PC portable mlg 1280px */
-@media screen and (min-width: break-point(mlg)){
-  .item-4{
-    grid-column: 3 / 6;
-    z-index:6;
+  @media screen and (min-width: break-point(mlg)){
+    .item-4{
+      grid-column: 3 / 6;
+      z-index:6;
+    }
+    .item-6 {
+      grid-column: 4/7;
+    }
   }
-  .item-6 {
-    grid-column: 4/7;
-  }
-}
 /* PC portable xlg 1360px */
-@media screen and (min-width: break-point(xlg)){
-  .item-6{
-    grid-column: 2/7;
-    z-index: 6;
-    margin-top: 6rem;
+  @media screen and (min-width: break-point(xlg)){
+    .item-6{
+      grid-column: 2/7;
+      z-index: 6;
+      margin-top: 6rem;
+    }
   }
-
-}
 /* PC  xtlg  1920px */
-@media screen and (min-width: break-point(xtlg)){
-  .m-wrap.realisation{
-    width: 75%;
+  @media screen and (min-width: break-point(xtlg)){
+    .m-wrap.realisation{
+      width: 75%;
+    }
+    .item-6{
+      margin-top: 9rem;
+    }
+    .item-24{
+      padding-right: 1.3rem;
+    }
   }
-  .item-6{
-    margin-top: 9rem;
+  @media screen and (min-width: break-point(xxtlg)){
+    .item-6 {
+      margin-top: 13rem;
+    }
+    .item-24{
+      padding-right: 7.3rem;
+    }
   }
-  .item-24{
-    padding-right: 1.3rem;
-  }
-}
-@media screen and (min-width: break-point(xxtlg)){
-  .item-6 {
-    margin-top: 13rem;
-  }
-  .item-24{
-    padding-right: 7.3rem;
-  }
-}
 
 
 
