--- a/css/screen.css
+++ b/css/screen.css
@@ -3106,6 +3106,20 @@ footer .l-footer .section__footer--right .btn--footer {
     margin-left: 1rem;
     margin-top: -9rem;
   }
+  .m-wrap.realisation .coverrelatif2 > img {
+    margin-top: -2rem;
+    width: 117%;
+    margin-left: 1.7rem;
+  }
+  .m-wrap.realisation .coverrelatif-second2left img {
+    top: 20rem;
+    left: 1.3rem;
+    width: 85%;
+  }
+  .m-wrap.realisation .coverrelatif-second3left img {
+    left: 0.2rem;
+    top: -13.5rem;
+  }
 }
 @media screen and (min-width: 799px) {
   .m-wrap.realisation .backimage {
@@ -3413,18 +3427,12 @@ footer .l-footer .section__footer--right .btn--footer {
   justify-content: space-around;
   padding-bottom: 2rem;
 }
-@media screen and (min-width: 740px) {
-  .m-wrap.realisation .section__realisation--page_rea .cadre__detail {
-    margin-left: -2rem;
-  }
-}
 @media screen and (min-width: 1024px) {
   .m-wrap.realisation .section__realisation--page_rea .cadre__detail {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-row: 1;
     width: auto;
-    margin-left: -2rem;
   }
 }
 .m-wrap.realisation .section__realisation--page_rea .cadre__detail .title__primary {
@@ -3478,7 +3486,7 @@ footer .l-footer .section__footer--right .btn--footer {
   }
 }
 .m-wrap.realisation .section__realisation--page_rea .cadre__detail .img--detail {
-  background-image: url("../img/demo-right.png");
+  background-image: url("../img/Demo-right.png");
   display: block;
   background-repeat: no-repeat;
   background-size: auto;
@@ -3904,6 +3912,7 @@ footer .l-footer .section__footer--right .btn--footer {
   .item-22 {
     margin-top: 0.2rem;
     margin-bottom: 8rem;
+    margin-right: 1rem;
   }
 
   .item-3 {
@@ -3955,6 +3964,21 @@ footer .l-footer .section__footer--right .btn--footer {
     grid-row: 5/6;
     padding-left: 1.5rem;
     background-color: yellow;
+  }
+
+  .item-23 {
+    grid-column: 5/7;
+    grid-row: 1/3;
+    margin-left: -1.2rem;
+  }
+
+  .item-32 {
+    grid-column: 5/7;
+    grid-row: 2/2;
+  }
+
+  .item-34 {
+    margin-top: -8.1rem;
   }
 }
 /* petit PC portable md-plus 799 */
