--- a/sass/modules/_m-realisations-grid.scss
+++ b/sass/modules/_m-realisations-grid.scss
@@ -336,6 +336,7 @@
     .item-22{
       margin-top: 0.2rem;
       margin-bottom: 8rem;
+      margin-right: 1rem;
     }
 
     .item-3 {
@@ -383,6 +384,20 @@
     padding-left: 1.5rem;
     background-color: yellow;
     }
+    .item-23 {
+      grid-column: 5/7;
+      grid-row: 1/3;
+      margin-left: -1.2rem;
+    }
+    .item-32 {
+      grid-column: 5/7;
+      grid-row: 2/2;
+    }
+    .item-34 {
+      margin-top: -8.1rem;
+    }
+
+
   }
 
 /* petit PC portable md-plus 799 */
