--- a/css/screen.css
+++ b/css/screen.css
@@ -3216,13 +3216,15 @@ footer .l-footer .section__footer--right .btn--footer {
     position: relative;
     left: 6.5rem;
     bottom: -4.2rem;
-    width: 85%;
+    width: 73%;
   }
   .m-wrap.realisation .coverrelatif-ter {
     position: absolute;
-    left: 22rem;
+    left: 27rem;
     bottom: -7.2rem;
-    max-width: 100%;
+  }
+  .m-wrap.realisation .backimage {
+    width: 61%;
   }
   .m-wrap.realisation .backimage2 {
     width: 90%;
@@ -3246,6 +3248,21 @@ footer .l-footer .section__footer--right .btn--footer {
   .m-wrap.realisation .coverrelatif-second2left img {
     top: 8.1rem;
     left: 1.8rem;
+  }
+  .m-wrap.realisation .backimage-second > img {
+    max-width: 59%;
+    left: 7.5rem;
+    top: 3rem;
+  }
+  .m-wrap.realisation .coverrelatif-second2right > img {
+    width: 96%;
+    margin-left: 1.6rem;
+    margin-top: -1.2rem;
+  }
+  .m-wrap.realisation .coverrelatif2 > img {
+    margin-top: -1rem;
+    margin-left: 1.4rem;
+    width: 102%;
   }
 }
 @media screen and (min-width: 1280px) {
@@ -3963,7 +3980,6 @@ footer .l-footer .section__footer--right .btn--footer {
     grid-column: 5/7;
     grid-row: 5/6;
     padding-left: 1.5rem;
-    background-color: yellow;
   }
 
   .item-23 {
@@ -4068,6 +4084,10 @@ footer .l-footer .section__footer--right .btn--footer {
 }
 /* petit PC portable lg 1024px */
 @media screen and (min-width: 1024px) {
+  .item-1 {
+    grid-column: 4/7;
+  }
+
   .item-21 {
     grid-column: 1/5;
   }
@@ -4077,15 +4097,35 @@ footer .l-footer .section__footer--right .btn--footer {
     margin-bottom: 4.5rem;
   }
 
+  .item-32 {
+    grid-column: 6/7;
+    grid-row: 2/3;
+    margin-top: -7rem;
+    margin-left: -2rem;
+  }
+
+  .item-3 {
+    grid-column: 4/7;
+  }
+
   .item-23 {
     grid-column: 4/6;
     grid-row: 1/3;
+  }
+
+  .item-4 {
+    margin-top: 4.7rem;
+    padding-right: 2.2rem;
   }
 
   .item-24 {
     grid-column: 3/6;
     margin-top: 15.5rem;
     margin-bottom: 4rem;
+  }
+
+  .item-5 {
+    grid-column: 5/7;
   }
 
   .item-26 {
