--- a/sass/modules/_m-realisations-grid.scss
+++ b/sass/modules/_m-realisations-grid.scss
@@ -382,7 +382,7 @@
     grid-column: 5/7;
     grid-row: 5/6;
     padding-left: 1.5rem;
-    background-color: yellow;
+
     }
     .item-23 {
       grid-column: 5/7;
@@ -486,6 +486,9 @@
 
 /* petit PC portable lg 1024px */
   @media screen and (min-width: break-point(lg)){
+    .item-1 {
+      grid-column: 4/7;
+    }
     .item-21 {
       grid-column: 1 / 5;
     }
@@ -493,14 +496,30 @@
       grid-column: 2/5;
       margin-bottom: 4.5rem;
     }
+    .item-32 {
+      grid-column: 6/7;
+      grid-row: 2/3;
+      margin-top: -7rem;
+      margin-left: -2rem;
+    }
+    .item-3 {
+      grid-column: 4/7;
+    }
     .item-23 {
       grid-column: 4 / 6;
       grid-row: 1 / 3;
+    }
+    .item-4{
+      margin-top: 4.7rem;
+      padding-right: 2.2rem;
     }
     .item-24 {
       grid-column: 3 / 6;
       margin-top: 15.5rem;
       margin-bottom: 4rem;
+    }
+    .item-5{
+      grid-column: 5/7;
     }
     .item-26{
       margin-top: 8.9rem;
