--- a/css/screen.css
+++ b/css/screen.css
@@ -3229,6 +3229,12 @@ footer .l-footer .section__footer--right .btn--footer {
   .m-wrap.realisation .backimage2 {
     width: 90%;
   }
+  .m-wrap.realisation .backimage3 {
+    width: 77%;
+  }
+  .m-wrap.realisation .backimage3 > img {
+    width: 109%;
+  }
   .m-wrap.realisation .coverimage2middle {
     bottom: 14.8rem;
     width: 77%;
@@ -3262,7 +3268,21 @@ footer .l-footer .section__footer--right .btn--footer {
   .m-wrap.realisation .coverrelatif2 > img {
     margin-top: -1rem;
     margin-left: 1.4rem;
-    width: 102%;
+    width: 134%;
+  }
+  .m-wrap.realisation .backimage-second3right > img {
+    width: 117%;
+    margin-top: 15rem;
+    padding-right: 1rem;
+    margin-left: -1rem;
+  }
+  .m-wrap.realisation .coverrelatif-second3right img {
+    width: 71%;
+    margin-left: 2rem;
+    margin-bottom: 0.7rem;
+  }
+  .m-wrap.realisation .coverrelatif-second3left img {
+    max-width: 75%;
   }
 }
 @media screen and (min-width: 1280px) {
@@ -4101,7 +4121,7 @@ footer .l-footer .section__footer--right .btn--footer {
     grid-column: 6/7;
     grid-row: 2/3;
     margin-top: -7rem;
-    margin-left: -2rem;
+    margin-left: -4rem;
   }
 
   .item-3 {
@@ -4111,6 +4131,14 @@ footer .l-footer .section__footer--right .btn--footer {
   .item-23 {
     grid-column: 4/6;
     grid-row: 1/3;
+  }
+
+  .item-33 {
+    grid-column: 4/6;
+    grid-row: 2/2;
+    margin-bottom: 0.2rem;
+    padding-bottom: 0.8rem;
+    margin-top: -20.3rem;
   }
 
   .item-4 {
@@ -4124,18 +4152,43 @@ footer .l-footer .section__footer--right .btn--footer {
     margin-bottom: 4rem;
   }
 
+  .item-34 {
+    grid-column: 1/4;
+    grid-row: 2/3;
+    margin-top: -6.1rem;
+  }
+
   .item-5 {
     grid-column: 5/7;
+  }
+
+  .item-35 {
+    grid-column: 6/7;
+    grid-row: 2/5;
   }
 
   .item-26 {
     margin-top: 8.9rem;
   }
 
+  .item-36 {
+    grid-column: 1/3;
+    grid-row: 2/6;
+    margin-top: 15rem;
+    margin-right: -1.3rem;
+  }
+
   .item-27 {
     grid-column: 3/6;
     margin-left: 1rem;
     margin-right: 1rem;
+  }
+
+  .item-37 {
+    grid-column: 3/6;
+    grid-row: 5/6;
+    margin-left: -3.3rem;
+    margin-top: 6rem;
   }
 }
 /* petit PC portable mlg 1280px */
