--- a/sass/modules/_m-realisations-grid.scss
+++ b/sass/modules/_m-realisations-grid.scss
@@ -500,7 +500,7 @@
       grid-column: 6/7;
       grid-row: 2/3;
       margin-top: -7rem;
-      margin-left: -2rem;
+      margin-left: -4rem;
     }
     .item-3 {
       grid-column: 4/7;
@@ -508,6 +508,13 @@
     .item-23 {
       grid-column: 4 / 6;
       grid-row: 1 / 3;
+    }
+    .item-33 {
+      grid-column: 4/6;
+      grid-row: 2/2;
+      margin-bottom: 0.2rem;
+      padding-bottom: 0.8rem;
+      margin-top: -20.3rem;
     }
     .item-4{
       margin-top: 4.7rem;
@@ -518,17 +525,39 @@
       margin-top: 15.5rem;
       margin-bottom: 4rem;
     }
+    .item-34{
+      grid-column: 1/4;
+      grid-row: 2/3;
+      margin-top: -6.1rem;
+    }
+
     .item-5{
       grid-column: 5/7;
     }
+    .item-35{
+      grid-column: 6/7;
+      grid-row: 2/5;
+    }
     .item-26{
       margin-top: 8.9rem;
+    }
+    .item-36 {
+      grid-column: 1/3;
+      grid-row: 2/6;
+      margin-top: 15rem;
+      margin-right: -1.3rem;
     }
 
     .item-27 {
       grid-column: 3/6;
       margin-left: 1rem;
       margin-right: 1rem;
+    }
+    .item-37 {
+      grid-column: 3/6;
+      grid-row: 5/6;
+      margin-left: -3.3rem;
+      margin-top: 6rem;
     }
   }
 
